--- a/src/components/ForumModal/ForumModal.module.scss
+++ b/src/components/ForumModal/ForumModal.module.scss
@@ -1,10 +1,9 @@
 .FormModal{
     position: relative;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     z-index: 1;
     margin-left: 0;
-    top:-140px;
     display: flex;
     flex-direction: column;
     justify-content: center;
