--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -15,21 +15,24 @@
             height: 30px;
             width: 50vw;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+            border: solid 1px white ;
         }
         button{
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 13px;
+
             margin-left: 10px;
             padding: 16px;
-            border: solid 1px white;
             border-radius: 7px;
             height: 30px;
             width: 5vw;
             border-radius: 0;
-            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+        }
+        button:hover{
+            color: white;
+            background-color: rgb(180,217,247);
         }
 
     }
