--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -13,7 +13,7 @@
     z-index: 1;
     background-size: cover;
     overflow-y: scroll;
-    
+
     header{
 
         display: flex;
@@ -22,8 +22,10 @@
         align-items: center;
         color: black;
         width: 100vw;
-        height: 30vh;
+        height: 40vh;
+        
         h1{
+            margin: 0;
             color: transparent;
             background: rgb(180,217,247);
             -webkit-background-clip: text;
@@ -31,10 +33,13 @@
             background-clip: text;
             text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
         }
-        h2{}
+        h2{
+            margin-top: 5vh;
+        }
         h3{}
         h4{}
         section{
+            background-color: yellow;
            top: 40vh; 
             display: flex;
             justify-content: space-evenly;
@@ -54,7 +59,6 @@
     }
     ul{
         top:50vh;
-        background-color: red;
         background-color: lightgrey;
         animation: fadeIn 2s;
         list-style-type: none;
@@ -87,7 +91,6 @@
                 padding: 20px;
                 transition: 3s;
                 border-radius: 7px;
-                animation: borderHighlight 3s infinite; 
             }
             section{
                 display: flex;
@@ -275,7 +278,7 @@
                 background-color: black;
             }
             li:hover{
-                animation: borderHighlightDarkMode 3s infinite; 
+
             }
                 section{
     
@@ -329,34 +332,3 @@
     0% { opacity: 0; }
     100% { opacity: 1; }
   }
-  @keyframes borderHighlight {
-    0%, 100% {
-        border-color: rgb(180, 217, 247); /* Initial and final border color */
-    }
-    25% {
-        border-color: white; /* Highlighted border color */
-    }
-    50% {
-        border-color: rgb(180, 217, 247); /* Initial and final border color */
-
-    }
-    75% {
-        border-color: white; /* Highlighted border color */
-    }
-}
-
-@keyframes borderHighlightDarkMode {
-    0%, 100% {
-        border-color: #FF6410; /* Initial and final border color */
-    }
-    25% {
-        border-color: white; /* Highlighted border color */
-    }
-    50% {
-        border-color: #FF6410; /* Initial and final border color */
-
-    }
-    75% {
-        border-color: white; /* Highlighted border color */
-    }
-}
