--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 33px;
     width: 100vw;
-    height: 100%;
+    height: 95vh;
     background-color: rgb(245, 245, 245);
     border-top: solid 1px black;
     color: black;
@@ -18,7 +18,7 @@
 
     .postCard {
         position: absolute;
-        top: 10vh;
+        top: 2vh;
         width: 80vw;
         background-color: white;
         display: flex;
@@ -101,13 +101,15 @@
                 left: 0;
                 top: 60vh;
                 overflow-y: visible;
-
+   
+   
+   
                 .comment {
                     overflow-y: visible;
                     overflow-X: visible;
                     margin: 4px;
                     background-color: white;
-                    width: 70vw;
+                    width: 68vw;
                     height: 5vh;
                     padding: 15px;
                     border-radius: 7px;
@@ -127,20 +129,22 @@
                 width: 75vw;
                 margin-bottom: 10px;
                 border-radius: 7px;
-                background-color: grey;
-                color: white;
+                background-color: white;
                 margin: 5px;
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+            border: solid 1px white ;
             }
 
             button {
+                border: none;
                 border-radius: 7px;
                 width: 10vw;
                 margin-bottom: 10px;
-
+                box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
             }
             button:hover{
-                background-color: rgb(180, 217, 247);
-                color:white;
+                color: white;
+                background-color: rgb(180,217,247);
             }
         }
     }
