--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -68,7 +68,7 @@
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
         border-radius: 7px;
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column;
         width: 90vw;
         border: solid 1px ;
         align-items: center;
