--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -110,8 +110,10 @@
     margin-top: 20px;
     background-color: rgb(28,28,28);
     .loginForm{
+        color:white;
         .inputText{
             color:white;
+            background-color: rgba(28,28,28);
         }
     }
  }
