--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -30,24 +30,29 @@
         width: 15vw;
         height: 15vw;
         border-radius: 90px;
+        overflow: hidden;
         input{
-            background-color: rgb(93, 58, 58);
-            display: flex;
-            flex-direction: column;
-            width: 10vw;
-            color: white;
-            border-radius: 3px;
+            display: none;
         }
+       
         button{
             border-radius: 3px;
             padding: 5px;
             background-color: red;
         }
         img{
-            width: 10vw;
+            width: 15vw;
+            // border-radius: 90px;
+            // overflow: hidden;
+
+        }
+        img:hover{
+            cursor: pointer;
         }
     }
-
+    .userPic:hover{
+        cursor: pointer;
+    }
     .controlPanel{
         display: flex;
         justify-content: space-around;
@@ -63,8 +68,8 @@
             align-items: center;
             border-radius: 50px;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-            width: 2vw;
-            height: 2vw;
+            width: 2.5vw;
+            height: 2.5vw;
         }
         .setting{
             background-color: rgb(236,106,94);
@@ -72,7 +77,7 @@
             align-items: center;
             justify-content: center;
             img{
-                width: 20px;
+                width: 1.5vw;
             }
         }
         .friends{
@@ -81,7 +86,8 @@
             align-items: center;
             justify-content: center;
             img{
-                width: 20px;
+
+                width: 1.5vw;
             }
         }
         .edit{
