--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -13,7 +13,7 @@
         justify-content: flex-end;
         align-items: center;
         width: 70vw;
-        
+
         .yourPosts {
             display: flex;
             justify-content: center;
@@ -22,7 +22,7 @@
             height: 10vh;
             color: black;
         }
-        
+
         li {
             //animation: fadeIn 1s;
             border-radius: 7px;
@@ -75,18 +75,18 @@
                 border-radius: 7px;
                 animation: borderHighlight 3s infinite;
             }
-            
+
             aside {
                 display: flex;
                 width: 65vw;
                 justify-content: flex-start;
                 padding-left: 10px;
-                
+
                 p {
                     margin-left: 5px;
                     margin-right: 5px;
                 }
-                
+
                 .like:hover,
                 .dislike:hover,
                 .comment:hover {
@@ -94,115 +94,77 @@
                 }
             }
         }
-        .noPosts{
+
+        .noPosts {
 
             margin-bottom: 5vh;
         }
     }
 
-    @keyframes fadeIn {
-        0% {
-            opacity: 0;
-        }
-
-        100% {
-            opacity: 1;
-        }
-    }
 
     @media (max-width:900px) {
         .UserPosts {
+            .yourPosts {}
 
-            position: absolute;
-            top: 40vh;
-            width: 90vw;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
+            li {
 
+                section {
 
-            ul {
-                width: 90vw;
+                    h4 {}
 
-                display: flex;
-                justify-content: flex-start;
-                flex-direction: column;
-                align-items: flex-start;
-                list-style-type: none;
-
-                .yourPosts {
-                    justify-self: flex-start;
-                    width: 80vw;
-                    height: 5vh;
+                    h2 {}
                 }
 
-                li {
+                h3 {}
 
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    width: 80vw;
-                    height: 60vh;
-                    margin-left: 5vw;
+                h3:hover {}
 
-                    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+                aside {
 
-                    section {
-                        width: 80vw;
-                        height: 5vh;
-                        display: flex;
-                        justify-content: space-between;
+                    p {}
 
-                        h1,
-                        h2 {
-
-                            font-size: 10px;
-                        }
-                    }
-
-                    h3 {
-                        width: 80vw;
-                    }
-
+                    .like:hover,
+                    .dislike:hover,
+                    .comment:hover {}
                 }
             }
+
+            .noPosts {}
         }
     }
 
     @media (prefers-color-scheme:dark) {
-        ul {
+        .UserPosts {
             .yourPosts {
-
+                color: white;
             }
+
             li {
-                background-color: rgb(28,28,28);
+
                 section {
-                    h4 {
 
-                    }
-                    h2 {
+                    h4 {}
 
-                    }
+                    h2 {}
                 }
-                h3 {
-                }
-                h3:hover {
-                }
+
+                h3 {}
+
+                h3:hover {}
+
                 aside {
-                    p {
 
-                    }
+                    p {}
+
                     .like:hover,
                     .dislike:hover,
-                    .comment:hover {
-                        color: #FF6410;
-                    }
+                    .comment:hover {}
                 }
             }
-        }
 
+            .noPosts {
+            }
+        }
     }
 
     @keyframes borderHighlight {
@@ -221,11 +183,21 @@
         50% {
             border-color: rgb(180, 217, 247);
             /* Initial and final border color */
-
         }
 
         75% {
             border-color: white;
             /* Highlighted border color */
         }
+    }
+
+    @keyframes fadeIn {
+        0% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+        }
+
     }
