fixed posts and forum bugs where if the created user is deleted then post or forum does not load

--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -41,7 +41,9 @@
             background-color: red;
         }
         img{
-            width: 15vw;
+            padding-top: 25px;
+            width: 14vw;
+
             // border-radius: 90px;
             // overflow: hidden;
 
