--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -112,9 +112,12 @@
     .loginForm{
         color:white;
         .inputText{
-            color:white;
             background-color: rgba(28,28,28);
+            color:white;
         }
+    }
+    .signupButton{
+        color: white;
     }
  }
 }
