--- a/src/components/ForumModal/ForumModal.module.scss
+++ b/src/components/ForumModal/ForumModal.module.scss
@@ -1,7 +1,7 @@
 .FormModal{
     position: relative;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     z-index: 1;
     margin-left: 0;
     display: flex;
@@ -59,10 +59,10 @@
         }
         button{
             color:black;
-            background-color: white;
             border-radius: 7px;
-            border-color: white;
             margin-top: 10px;
+            background-color: white;
+            border-color: white;
             width: 60px;
             height: 20px;
         }
