--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -41,11 +41,11 @@
             background-color: red;
         }
         img{
-            padding-top: 25px;
-            width: 4vw;
+
+            width: 25vw;
 
             // border-radius: 90px;
-            // overflow: hidden;
+             overflow: hidden;
 
         }
         img:hover{
