--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -104,8 +104,11 @@
             align-items: center;
             width: 150px;
             height: 150px;
-
-
+            overflow: hidden;
+            img{
+                width: 150px;
+                height: 150px;
+            }
 
         }
 
