--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -102,12 +102,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 150px;
-            height: 150px;
+            width: 10vw;
+            height: 10vw;
             overflow: hidden;
             img{
-                width: 150px;
-                height: 150px;
+                width: 10vw;
+                height: 10vw;
             }
 
         }
