quick darkmode css edit

--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -90,7 +90,7 @@
         width: 20vw;
         height: 10vh;
         border-radius: 7px;
-        overflow-y: visible;
+        overflow-y: scroll;
 
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
         p{
@@ -279,6 +279,14 @@
             }
         }
 
+    }
+    .bio{
+        background-color:rgb(28,28,28);
+        color:white;
+    }
+    .userInfo{
+        background-color:rgb(28,28,28);
+        color: white;
     }
 
 }
