--- a/src/components/PostModal/PostModal.module.scss
+++ b/src/components/PostModal/PostModal.module.scss
@@ -14,7 +14,7 @@
         animation: fadeIn 0.5s;
         border-radius: 7px;
         width: 60vw;
-        height: 45vw;
+        height: 50vw;
         background-color: white;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
         section{
@@ -81,6 +81,7 @@
                         align-items: center;
                         width: 10vw;
                         border-radius: 7px;
+                        color: black;
                     }
                     h4:hover{
                         padding: 0;
@@ -147,6 +148,7 @@
                         h4{
                             background-color: rgb(28,28,28);
                             overflow-x: hidden;
+                            color: white;
                         }
                         h4:hover{
                         background-color: #FF6410;
