--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -1,47 +1,49 @@
-.UserPage{
+.UserPage {
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    top:32px;
+    top: 32px;
     align-items: center;
     height: 100vh;
     background-color: white;
     background-size: cover;
-    overflow-y: scroll;
+
     border-top: solid 1px black;
     // background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
     // background-size: cover;
     position: fixed;
-    .heading{
+
+    .heading {
         width: 100vw;
         padding-left: 25vw;
         font-size: 2em;
         color: transparent;
-background: rgb(180,217,247);
--webkit-background-clip: text;
--moz-background-clip: text;
-background-clip: text;
-text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
+        background: rgb(180, 217, 247);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
     }
-    
+
 }
 
 
 
-@media (max-width:900px){
-    .UserPage{
-        top:0;
-        
+@media (max-width:900px) {
+    .UserPage {
+        top: 0;
+
     }
 }
 
 
 @media (prefers-color-scheme:dark) {
-    .UserPage{
+    .UserPage {
 
         background-color: black;
-        .heading{
+
+        .heading {
             color: transparent;
             background: #FF6410;
             -webkit-background-clip: text;
@@ -52,4 +54,3 @@ text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
 
     }
 }
-
