--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -108,6 +108,17 @@
 
                 }
             }
+            .postImage{
+                overflow: hidden;
+                background-size: contain;
+                width: 80vw;
+                height: 50vh;
+                border-radius: 6px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-left: 2vw;
+            }
             h3{
                 margin-left: 2vw;
                 margin-top: 0;
@@ -119,6 +130,8 @@
                 background-color: gray;
                 border-radius: 7px;
                 color: white;
+                font-size: 10vmin;
+                overflow: hidden;
             }
             
             aside{
