--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -65,6 +65,10 @@
                 border: solid 2px black;
                 border-radius: 7px;
             }
+            .postImage{
+                width: 65vw;
+                height: 50vh;
+            }
 
             h3:hover {
                 padding: 10px;
