--- a/src/components/PostModal/PostModal.module.scss
+++ b/src/components/PostModal/PostModal.module.scss
@@ -10,124 +10,32 @@
     background-color: rgba(255, 255, 255, 0.5); /* Adjust the alpha value for transparency */
     backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
     animation: fadeIn 1s;
+
     .form{
-        animation: fadeIn 0.5s;
-        border-radius: 7px;
-        width: 60vw;
-        height: 50vw;
         background-color: white;
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
-        form{
+        border-radius:7px;
+        height: 70vh;
+        box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+        .forumList{
+            width: 45vw;
+            height: 3vh;
+            border-radius: 7px;
             display: flex;
-            flex-direction: column;
-            .heading{
-                margin: 0;
-                width: 60vw;
+            align-items: center;
+            justify-content: flex-start;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+            margin: 5px;
+            h4{
+                border-radius: 7px;
+                width: 10vw;
+                height: 2.5vh;
+                background-color: white;
+                margin-left: 2.5px;
                 display: flex;
-                flex-direction: column;
-                p{
-                    color:rgb(180,217,247);
-                    font-size: 25px;
-                    padding-left: 30px;
-                }
-                h1{
-                    display: flex;
-                    justify-content: center;
-                    width: 55vw;
-                    align-self: center;
-                }
-            }
-            aside{
-
-                width: 40vw;
-
-                align-self: center;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                button{
-                    margin-left: 10px;
-                    margin-top: 10px;
-                    background-color: white;
-                    border-color: white;
-                    width: 60px;
-                    height: 20px;
-
-                }
-                button:hover{
-                    background-color: rgb(180,217,247);
-                    color: white;
-                }
-                .forumList{
-                    display: flex;
-                    justify-content: center;
-                    width: 40vw;
-                    height: 30px;
-                    background-color: white;
-                    border-radius: 7px;
-                    margin: 10px;
-                    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-                    overflow-x: scroll;
-                    list-style-type: none;
-                    padding: 0;
-                    overflow-y: hidden;
-                    h4{
-                        height: 25px;
-                        background-color: white;
-                        margin-top: 2.5px;
-                        margin-right: 2.5px;
-                        margin-left: 2.5px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        width: 10vw;
-                        border-radius: 7px;
-                        color: black;
-                    }
-                    h4:hover{
-                        padding: 0;
-                        background-color: rgb(180,217,247);
-                        color: white;
-                    }
-                   
-                }
-                .line{
-
-                    height: 2px;
-                    width: 40vw;
-                    background-color: black;
-
-
-                }
-                .or{
-
-                    width: 40vw;
-                    font-size: 25px;
-                    display: flex;
-                    justify-content: center;
-                }
-                h3{
-                    
-                    margin: 10px;
-                    
-                }
-                input{
-                    margin: 10px;
-                    align-self: flex-start;
-                    width: 40vw;
-                    border-radius: 7px;
-                    border: solid 1px black;
-                    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
-                }
-                #textField{
-
-                }
+            align-items: center;
+            justify-content: center;
             }
         }
-    }
-    .form{
-
         form{
             
             height: 60vh;
@@ -149,7 +57,6 @@
                 justify-content: center;
                 width: 40vw;
                 border-radius: 7px;
-                margin: 0;
                 
             }
             h2{
@@ -166,6 +73,9 @@
                 margin: 0;
                 box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
                 
+            }
+            .fileInput{
+                width:20vw;
             }
             .line{
                 margin: 5vh;
@@ -193,6 +103,9 @@
             .or{
                 margin: 2vh;
 
+            }
+            .upload{
+                margin-left: 5px;
             }
         }
         
