--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 33px;
     width: 100vw;
-    height: 95vh;
+    height: 100vh;
     background-color: rgb(245, 245, 245);
     border-top: solid 1px black;
     color: black;
@@ -11,183 +11,70 @@
     justify-content: flex-start;
     align-items: center;
 
-    h1 {
-        position: absolute;
-        height: 5vh;
-    }
-
-    .postCard {
-        position: absolute;
-        top: 2vh;
+    section{
+        margin-top:5vh;
         width: 80vw;
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border-radius: 7px;
-        box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-
-        header {
-            display: flex;
-            justify-content: space-around;
-            flex-direction: row;
-            align-items: center;
+        height: 100%;
+        background-color: red;
+        header{
+            height: 10vh;
             width: 80vw;
-            height: 8vh;
-
-            h1 {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 8vh;
-                width: 33%;
-                
-            }
-            
-            h2 {
-                width: 33%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 8vh;
-
-            }
-        }
-
-        section {
-            height: 40vh;
-            width: 80vw;
-            background-color: gray;
+            background-color: green;
+            border-radius: 7px;
             display: flex;
-            justify-content: center;
+            justify-content: space-evenly;
             align-items: center;
         }
-
-        aside {
-
-            display: flex;
-            align-items: center;
+        aside{
+            width: 80vw;
+            height: 50vh;
+            background-color: pink;
+        }
+        p{
+            width: 80vw;
+            height: 50vh;
+            font-size: 7vmin;
+            overflow-wrap: break-word;
+            overflow-y: scroll;
+            overflow: hidden;
+        }
+        .interactions{
+            width: 80vw;
             height: 5vh;
-            width: 80vw;
-            border: solid 1px black;
-
-            h4 {
-                margin-left: 15px;
-            }
-
-            h4:hover {
-                color: rgb(180, 217, 247);
+            background-color: yellow;
+            display: flex;
+            align-items: center;
+            h4{
+                margin-left: 10px;
             }
         }
-
-        footer {
-            display: flex;
-            flex-direction: column;
-            width: 80vw;
-            height: 30vh;
-            align-items: center;
-
-            h3 {
-                align-self: flex-start;
-                padding-left: 15px;
-            }
-
-            .commentSection {
-                width: 77vw;
-                height: 20vh;
+        .commentSection{
+            top: 76vh;
+            left: 12.5vw;
+            background-color: gold;
+            height: 15vh;
+            width: 70vw;
+            overflow-y: scroll;
+            li{
+                height: 10vh;
+                width: 65vw;
                 display: flex;
                 justify-content: flex-start;
-                flex-direction: column;
-                left: 0;
-                top: 60vh;
-                overflow-y: visible;
-   
-   
-   
-                .comment {
-                    overflow-y: visible;
-                    overflow-X: visible;
-                    margin: 4px;
-                    background-color: white;
-                    width: 68vw;
-                    height: 5vh;
-                    padding: 15px;
-                    border-radius: 7px;
-                    border: solid 1px black;
-
-                }
+                background-color: green;
             }
-        }
-
-        .inputDiv {
-
-            width: 70vw;
-            display: flex;
-            margin-top: 10px;
-            align-items: center;
-            input {
-                width: 75vw;
-                margin-bottom: 10px;
-                border-radius: 7px;
-                background-color: white;
-                margin: 5px;
-                box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-            border: solid 1px white ;
-            }
-
-            button {
-                border: none;
-                border-radius: 7px;
-                width: 10vw;
-                margin-bottom: 10px;
-                box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
-            }
-            button:hover{
-                color: white;
-                background-color: rgb(180,217,247);
+            .inputDiv{
+                position: absolute;
+                top: 102vh;
+                
             }
         }
     }
+    
 }
 
 @media (max-width:900px) {
     .PostPage {
-        h1 {
-        }
     
-        .postCard {           
-            header {
-                h1 {
-                }
-                h2 {
-                }
-            }
-            section {
-            }
-            aside {
-                h4 {
-                }
-                h4:hover {
-                }
-            }
-            footer {
-                h3 {
-                }
-                .commentSection {
-                    .comment {
-                    }
-                }
-            }
-            .inputDiv {
-                input {
-                }
-                button {    
-                }
-                button:hover{
-
-                }
-            }
-        }
     }
     
 }
@@ -196,46 +83,5 @@
     .PostPage {
         background-color: black;
         color: #FF6410;
-        h1 {
-        }
-        
-        .postCard {    
-            background-color: rgb(28,28,28);       
-            color:white;
-            header {
-                h1 {
-                }
-                h2 {
-                }
-            }
-            section {
-            }
-            aside {
-                h4 {
-                }
-                h4:hover {
-                    color: #FF6410;
-                }
-            }
-            footer {
-                h3 {
-                }
-                .commentSection {
-                    .comment {
-                        color:black;
-                    }
-                }
-            }
-            .inputDiv {
-                input {
-                }
-                button {    
-                }
-                button:hover{
-                    background-color: #FF6410;
-
-                }
-            }
-        }
     }
 }
