added OtherUserPage which renders others users info and can add friends and will do messaging func soon

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -66,6 +66,10 @@
             color: white;
 
         }
+        .profilePic{
+            width: 25px;
+            border-radius: 50%;
+        }
     }
 
     .clicked {
