--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 33px;
     width: 100vw;
-    height: 100vh;
+    height: 95vh;
     background-color: rgb(245, 245, 245);
     border-top: solid 1px black;
     color: black;
@@ -12,36 +12,57 @@
     align-items: center;
 
     section{
-        margin-top:5vh;
+        margin-top:1vh;
         width: 80vw;
-        height: 100%;
-        background-color: red;
+        height: 90vh;
+        border-radius: 7px;
+
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
         header{
             height: 10vh;
             width: 80vw;
-            background-color: green;
+
             border-radius: 7px;
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            .headerClickables:hover{
+                color: rgb(180,217,247);
+            }
         }
         aside{
             width: 80vw;
             height: 50vh;
-            background-color: pink;
+            
+        }
+        h4{
+            padding: 5px;
+        }
+        h4:hover{
+            cursor: pointer;
+            background-color:rgb(180,217,247);
+            padding: 5px;
+            border-radius: 7px;
         }
         p{
             width: 80vw;
-            height: 50vh;
+            height: 40vh;
+
             font-size: 7vmin;
             overflow-wrap: break-word;
             overflow-y: scroll;
             overflow: hidden;
         }
+        img{
+            width: 80vw;
+            height: 50vh;
+
+        }
         .interactions{
             width: 80vw;
             height: 5vh;
-            background-color: yellow;
+            position: absolute;
+            top: 61vh;
             display: flex;
             align-items: center;
             h4{
@@ -49,27 +70,53 @@
             }
         }
         .commentSection{
-            top: 76vh;
+            top: 65vh;
             left: 12.5vw;
-            background-color: gold;
+
             height: 15vh;
             width: 70vw;
             overflow-y: scroll;
+            display: flex;
+            flex-direction: column-reverse;
             li{
                 height: 10vh;
                 width: 65vw;
                 display: flex;
                 justify-content: flex-start;
-                background-color: green;
+                align-items: flex-start;
+                padding-left: 10px;
             }
-            .inputDiv{
-                position: absolute;
-                top: 102vh;
-                
+           
+        }
+        .inputDiv{
+            position: absolute;
+            top: 85vh;
+            width: 80vw;
+            display: flex;
+            justify-content: center;
+            input{
+                width: 50vw;
+                border-radius: 7px;
+                border: solid 1px black;
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+
+            }
+            button{
+                width: 10vw;
+                border-radius: 7px;
+                border: none;
+            }
+            button:hover{
+                background-color: rgb(180,217,247);
+                color: white;
             }
         }
     }
-    
+    .loading{
+        width: 5vh;
+        top:50vh;
+        position: absolute;
+    }
 }
 
 @media (max-width:900px) {
@@ -82,6 +129,62 @@
 @media (prefers-color-scheme:dark) {
     .PostPage {
         background-color: black;
-        color: #FF6410;
+        color: white;
+        section{
+            background-color: rgb(28,28,28);
+            border: solid 1px white;
+            header{
+                
+            .headerClickables:hover{
+                color: #FF6410;
+            }
+            }
+            aside{
+                border: solid 1px white;
+
+            }
+            h4{
+            }
+            h4:hover{
+                background-color: #FF6410;
+                color: white;
+
+            }
+            p{
+
+            }
+            img{
+
+            }
+            .interactions{
+
+                h4{
+
+                }
+            }
+            .commentSection{
+
+                li{
+
+                }
+               
+            }
+            .inputDiv{
+
+                input{
+
+    
+                }
+                button{
+
+                }
+                button:hover{
+                    background-color: #FF6410;
+                }
+            }
+        }
+        .loading{
+
+        }
     }
 }
